Fix electorals/ instructions box too low on mobile

--- a/electoral/app.css
+++ b/electoral/app.css
@@ -42,7 +42,7 @@ button#simulate:hover {
 
 #instructions {
   position: absolute;
-  top: 601px;
+  top: 586px;
   left: 8px;
   font-size: 0.75em;
   text-align: left;
